# pytest-sherlock

./: .travis.yml  LICENSE  README.md  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml  python-publish.yml
pytest_hercule/: plugin.py
pytest_sherlock/: binary_tree_search.py  plugin.py  sherlock.py
tests/: conftest.py
tests/exmaple/: conftest.py  test_all_read.py  test_b_modify.py  test_c_delete.py
tests/pytest_sherlock/: test_binary_tree_search.py  test_sherlock.py
