[bdist_wheel]
universal = 1

[metadata]
description-file = README.md
license_file = LICENSE

[options]
setup_requires =
  setuptools_scm

[tool:pytest]
cache_dir = ./.pytest_cache
testpaths = tests

[pylint]
max-line-length = 100
ignore = _version.py

[pylint.messages_control]
disable = C0114, R0205

[isort]
profile = black
skip = env,venv,.tox,build,.eggs,*.egg-info,.git,_version.py
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 100
